--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,400i,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:300,400i,700&display=swap");
 
 /* practiceyoshi.com? */
 
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
+    font-family: "Nunito", sans-serif;
 }
 
 /* General Styles */
@@ -22,7 +22,7 @@
     font-weight: 400;
     text-transform: uppercase;
     color: #fff;
-    text-shadow: 0 0 0 rgba(0, 0, 0, .2);
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
     letter-spacing: 1.75px;
     padding: 10px 18px;
     border-radius: 3px;
@@ -31,12 +31,12 @@
 
 .btn:hover {
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 .btn-blue {
@@ -58,6 +58,12 @@
     background: #f2f2f2;
 }
 
+hr {
+    width: 33%;
+    border: 0.5px solid #000;
+    margin: 30px auto;
+}
+
 /* Navigation Styles */
 
 nav {
@@ -70,7 +76,8 @@ nav {
 .nav__links {
     display: flex;
     justify-content: space-around;
-    width: 35%;
+    width: 50%;
+    margin-top: 15px;
 }
 
 .nav__links li {
@@ -93,17 +100,18 @@ nav {
     color: #1ec7fa;
 }
 
-
 /* Header Styles */
 
 header {
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../images/header-bg.png) center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+        url(../images/header-bg.png) center center/cover;
+    background-attachment: fixed;
     color: white;
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 4px;
-    text-shadow: 0.5px 0.5px 8px #000000;  
+    text-shadow: 0.5px 0.5px 8px #000000;
 }
 
 .header-main {
@@ -114,18 +122,18 @@ header {
 }
 
 .header-img {
-    width: 180px;
+    width: 160px;
 }
 
 header h1 {
     font-weight: bold;
-    font-size: 65px;
-    margin:20px auto 0;
+    font-size: 55px;
+    margin: 12px auto 0;
     line-height: 1.2em;
 }
 
 header h2 {
-    font-size: 45px;
+    font-size: 40px;
     font-weight: 400;
     margin-bottom: 30px;
 }
@@ -133,8 +141,8 @@ header h2 {
 /* Features Section */
 
 .info {
-    padding: 80px 10px;
-    background-color: #F5F5F5;
+    padding: 60px 10px;
+    background-color: #f5f5f5;
 }
 
 .features {
@@ -150,13 +158,28 @@ header h2 {
 
 .info h2 {
     font-size: 35px;
+    margin-bottom: 20px;
     text-align: center;
 }
 
-.info ul {
+.info p {
+    width: 60%;
     font-size: 23px;
-    font-weight: 700;
+    text-align: center;
+    margin: auto;
+    line-height: 1.5em;
+}
+
+.info ul {
+    padding: 12px 20px;
+    font-size: 23px;
+    font-weight: 400;
     list-style-type: none;
+}
+
+.info li:nth-child(1) {
+    font-weight: 700;
+    font-size: 26px;
 }
 
 .info li {
@@ -164,10 +187,23 @@ header h2 {
 }
 
 .info .ui-img {
-    width: 500px;
-    box-shadow: 12px 12px 15px rgba(0, 0, 0, .6);
-    margin-right: 200px;
+    width: 513px;
+    box-shadow: 12px 12px 15px rgba(0, 0, 0, 0.6);
+    margin-right: 100px;
 }
 
+/* Requirements Styles */
 
+.requirements {
+    height: 80vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+        url(../images/requirements-bg.png) center center/cover;
+    background-attachment: fixed;
+}
 
+/* Footer Styles */
+
+footer {
+    height: 10vh;
+    background: #1480a1;
+}
